Handle OrderItem.